--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Blogs | Salman Azeez</title>
-    <link rel="shortcut icon" href="../img/favicon.png">
+    <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/blog.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
